Fix overlap of pickers

--- a/packages/route_widget/components/search/components/fromTo.scss
+++ b/packages/route_widget/components/search/components/fromTo.scss
@@ -52,7 +52,7 @@
         }
         .fromTo__inputs__input_selection__element {
           cursor: pointer;
-          padding: 16px;
+          padding: 12px;
           &:hover {
             background-color: $black-50;
           }
